# CUDA-Change-Detection

./: .gitignore  Log.txt  Readme.md  linux.sh  mac.sh  win-compile.bat  win.bat
CPU/: .gitignore  build_n_run.sh  changeDetection.cpp  run.sh
CPU/include/: imageOperations.hpp
CPU/src/: imageOperations.cpp
CUDA/src/: CMakeLists.txt  main.cu
include/: datatypes.hpp  headers.hpp  machineInformation.hpp
include/CPU/: changeDetection.hpp  imageOperations.hpp
include/GPU/CUDA/: changeDetectionKernel.cuh  cudaChangeDetection.cuh  cudaProperties.cuh  deviceInformation.cuh  machineInformation.hpp
include/GPU/OpenCL/: openclChangeDetection.hpp  openclProperties.hpp
include/common/: dataTypes.hpp  devicePlatform.hpp  imageFunctions.hpp  subRoutines.hpp  systemMacros.hpp  winTimer.h
src/: CMakeLists.txt  machineInformation.cu  main.cpp  main.cu
src/CPU/: changeDetection.cpp  imageOperations.cpp
src/GPU/CUDA/: changeDetectionKernel.cu  cudaChangeDetection.cu  cudaProperties.cu  deviceInformation.cu  machineInformation.cu  main.cu
src/GPU/OpenCL/: oclChangeDetection.cl  openclChangeDetection.cpp  openclProperties.cpp
src/common/: imageFunctions.cpp  subRoutines.cpp
